--- a/prototype/_featured.scss
+++ b/prototype/_featured.scss
@@ -9,37 +9,37 @@
 }
 
 .fsb-slide_one {
-  background-image: url(../img/bookSimpleWayOfPieceLife.png);
+  background-image: url(./img/bookSimpleWayOfPieceLife.png);
 }
 
 .fsb-slide_two {
-  background-image: url(../img/bookGreatTravel.png);
+  background-image: url(./img/bookGreatTravel.png);
 
 }
 
 .fsb-slide_three {
-  background-image: url(../img/bookTheLadyBeautyScarlett.png);
+  background-image: url(./img/bookTheLadyBeautyScarlett.png);
 
 }
 
 
 .fsb-slide_four {
-  background-image: url(../img/bookOnceuponatime.png);
+  background-image: url(./img/bookOnceuponatime.png);
 
 }
 
 .fsb-slide_five {
-  background-image: url(../img/book1.png);
+  background-image: url(./img/book1.png);
 
 }
 
 .fsb-slide_six {
-  background-image: url(../img/bookLifeOfTheWild.png);
+  background-image: url(./img/bookLifeOfTheWild.png);
 
 }
 
 .fsb-slide_seven {
-  background-image: url(../img/book2.png);
+  background-image: url(./img/book2.png);
 }
 
 .feat-slider_book {
@@ -179,7 +179,7 @@
 }
 
 .featured1 {
-  margin-left: auto;
+    margin-left: auto;
     margin-right: auto;
     position: relative;
     overflow: hidden;
