--- a/prototype/_latestarticles.scss
+++ b/prototype/_latestarticles.scss
@@ -29,15 +29,15 @@
 }
 
 .articles__img_one {
-  background-image: url(../img/News1.jpg);
+  background-image: url(./img/News1.jpg);
 }
 
 .articles__img_two {
-  background-image: url(../img/News2.jpg);
+  background-image: url(./img/News2.jpg);
 }
 
 .articles__img_three {
-  background-image: url(../img/News3.jpg);
+  background-image: url(./img/News3.jpg);
 }
 
 .articles__date {
