--- a/prototype/_offerbook.scss
+++ b/prototype/_offerbook.scss
@@ -14,37 +14,37 @@
 }
 
 .offbook-slide_one {
-  background-image: url(../img/bookWayOfHappiness.png);
+  background-image: url(./img/bookWayOfHappiness.png);
 }
 
 .offbook-slide_two {
-  background-image: url(../img/bookFashionSystem.png);
+  background-image: url(./img/bookFashionSystem.png);
 
 }
 
 .offbook-slide_three {
-  background-image: url(../img/bookMusical.png);
+  background-image: url(./img/bookMusical.png);
 
 }
 
 
 .offbook-slide_four {
-  background-image: url(../img/bookLifeOfSeacrits.png);
+  background-image: url(./img/bookLifeOfSeacrits.png);
 
 }
 
 .offbook-slide_five {
-  background-image: url(../img/book2.png);
+  background-image: url(./img/book2.png);
 
 }
 
 .offbook-slide_six {
-  background-image: url(../img/bookLifeOfTheWild.png);
+  background-image: url(./img/bookLifeOfTheWild.png);
 
 }
 
 .offbook-slide_seven {
-  background-image: url(../img/book1.png);
+  background-image: url(./img/book1.png);
 }
 
 .offer-slider_book {
