--- a/prototype/_slider.scss
+++ b/prototype/_slider.scss
@@ -144,15 +144,15 @@
   }
 
 .b-slide_one {
-  background-image: url(../img/bookLifeOfTheWild.png);
+  background-image: url(./img/bookLifeOfTheWild.png);
 }
 
 .b-slide_two {
-  background-image: url(../img/book1.png);
+  background-image: url(./img/book1.png);
 }
 
 .b-slide_three {
-  background-image: url(../img/book2.png);
+  background-image: url(./img/book2.png);
 }
 
 .slider_right {
