--- a/prototype/_bestselling.scss
+++ b/prototype/_bestselling.scss
@@ -17,7 +17,7 @@
   height: 602px;
   width: 100vw;
   border: 15px solid #F3F2EC;
-  background-image: url(../img/bookBirdsGonnaBeHappy.png);
+  background-image: url(./img/bookBirdsGonnaBeHappy.png);
 
 }
 
