--- a/prototype/_popularbook.scss
+++ b/prototype/_popularbook.scss
@@ -151,111 +151,111 @@
 
 
 .bi-slide_six {
-  background-image: url(../img/book1.png);
+  background-image: url(./img/book1.png);
 }
 
 
  /* business block img*/ /* business block img*/ /* business block img*/ /* business block img*/ /* business block img*/ /* business block img*/ /* business block img*/ /* business block img*/
 
 .b-business_one {
-  background-image: url(../img/bussines1.jpg);
+  background-image: url(./img/bussines1.jpg);
 }
 
 .b-business_two {
-  background-image: url(../img/bussines2.jpg);
+  background-image: url(./img/bussines2.jpg);
 }
 
 .b-business_three {
-  background-image: url(../img/bussines3.jpg);
+  background-image: url(./img/bussines3.jpg);
 }
 
 .b-business_four {
-  background-image: url(../img/bussines4.jpg);
+  background-image: url(./img/bussines4.jpg);
 }
 
 .b-business_five {
-  background-image: url(../img/bussines5.jpg);
+  background-image: url(./img/bussines5.jpg);
 }
 
 .b-business_six {
-  background-image: url(../img/bussines6.jpg);
+  background-image: url(./img/bussines6.jpg);
 }
 
 .b-business_seven {
-  background-image: url(../img/bussines7.jpg);
+  background-image: url(./img/bussines7.jpg);
 }
 
 .b-business_eight {
-  background-image: url(../img/bussines8.jpg);
+  background-image: url(./img/bussines8.jpg);
 }
 
 /* technology block img*/ /* technology block img*/ /* technology block img*/ /* technology block img*/ /* technology block img*/ /* technology block img*/ /* technology block img*/
 
 .b-technology_one {
-  background-image: url(../img/technology1.jpg);
+  background-image: url(./img/technology1.jpg);
 }
 
 .b-technology_two {
-  background-image: url(../img/technology2.jpg);
+  background-image: url(./img/technology2.jpg);
 }
 
 .b-technology_three {
-  background-image: url(../img/technology3.jpg);
+  background-image: url(./img/technology3.jpg);
 }
 
 .b-technology_four {
-  background-image: url(../img/technology4.jpg);
+  background-image: url(./img/technology4.jpg);
 }
 
 .b-technology_five {
-  background-image: url(../img/technology5.jpg);
+  background-image: url(./img/technology5.jpg);
 }
 
 .b-technology_six {
-  background-image: url(../img/technology6.jpg);
+  background-image: url(./img/technology6.jpg);
 }
 
 .b-technology_seven {
-  background-image: url(../img/technology7.jpg);
+  background-image: url(./img/technology7.jpg);
 }
 
 .b-technology_eight {
-  background-image: url(../img/technology8.jpg);
+  background-image: url(./img/technology8.jpg);
 }
 
 /* classic block img*/ /* classic block img*/ /* classic block img*/ /* classic block img*/ /* classic block img*/ /* classic block img*/ /* classic block img*/ /* classic block img*/
 
 
 .b-classic_one {
-  background-image: url(../img/classic1.jpg);
+  background-image: url(./img/classic1.jpg);
 }
 
 .b-classic_two {
-  background-image: url(../img/classic2.jpg);
+  background-image: url(./img/classic2.jpg);
 }
 
 .b-classic_three {
-  background-image: url(../img/classic3.jpg);
+  background-image: url(./img/classic3.jpg);
 }
 
 .b-classic_four {
-  background-image: url(../img/classic4.jpg);
+  background-image: url(./img/classic4.jpg);
 }
 
 .b-classic_five {
-  background-image: url(../img/classic5.jpg);
+  background-image: url(./img/classic5.jpg);
 }
 
 .b-classic_six {
-  background-image: url(../img/classic6.jpg);
+  background-image: url(./img/classic6.jpg);
 }
 
 .b-classic_seven {
-  background-image: url(../img/classic7.jpg);
+  background-image: url(./img/classic7.jpg);
 }
 
 .b-classic_eight {
-  background-image: url(../img/classic8.jpg);
+  background-image: url(./img/classic8.jpg);
 }
 
 
@@ -263,69 +263,69 @@
 
 
 .b-romantic_one {
-  background-image: url(../img/romantic1.jpg);
+  background-image: url(./img/romantic1.jpg);
 }
 
 .b-romantic_two {
-  background-image: url(../img/romantic2.jpg);
+  background-image: url(./img/romantic2.jpg);
 }
 
 .b-romantic_three {
-  background-image: url(../img/romantic3.jpg);
+  background-image: url(./img/romantic3.jpg);
 }
 
 .b-romantic_four {
-  background-image: url(../img/romantic4.jpg);
+  background-image: url(./img/romantic4.jpg);
 }
 
 .b-romantic_five {
-  background-image: url(../img/romantic5.jpg);
+  background-image: url(./img/romantic5.jpg);
 }
 
 .b-romantic_six {
-  background-image: url(../img/romantic6.jpg);
+  background-image: url(./img/romantic6.jpg);
 }
 
 .b-romantic_seven {
-  background-image: url(../img/romantic7.jpg);
+  background-image: url(./img/romantic7.jpg);
 }
 
 .b-romantic_eight {
-  background-image: url(../img/romantic8.jpg);
+  background-image: url(./img/romantic8.jpg);
 }
 
 /* Detective block img*/ /* Detective block img*//* Detective block img*//* Detective block img*//* Detective block img*//* Detective block img*//* Detective block img*/
 
 .b-detective_one {
-  background-image: url(../img/detective1.jpg);
+  background-image: url(./img/detective1.jpg);
 }
 
 .b-detective_two {
-  background-image: url(../img/detective2.jpg);
+  background-image: url(./img/detective2.jpg);
 }
 
 .b-detective_three {
-  background-image: url(../img/detective3.jpg);
+  background-image: url(./img/detective3.jpg);
 }
 
 .b-detective_four {
-  background-image: url(../img/detective4.jpg);
+  background-image: url(./img/detective4.jpg);
 }
 
 .b-detective_five {
-  background-image: url(../img/detective5.jpg);
+  background-image: url(./img/detective5.jpg);
 }
 
 .b-detective_six {
-  background-image: url(../img/detective6.jpg);
+  background-image: url(./img/detective6.jpg);
 }
 
 .b-detective_seven {
-  background-image: url(../img/detective7.jpg);
+  background-image: url(./img/detective7.jpg);
 }
 
 .b-detective_eight {
-  background-image: url(../img/detective8.jpg);
+  background-image: url(./img/detective8.jpg);
 }
 
 
